@@ -1,3 +1,7 @@
+  05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  hash-slinger-2.5.ebuild:
+  net-dns/hash-slinger added python usedep
+
 *hash-slinger-2.5 (05 Jun 2014)
 
   05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
